environments/gloo-gateway/gateway-api/1.17/argo-rollouts/rollouts-demo/strategies/rollouts-ui/rollouts-ui-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: argo-rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
  namespace: rollouts-demo
spec:
  ports:
  - port: 3100
    protocol: TCP
    targetPort: 3100
  selector:
    app.kubernetes.io/name: argo-rollouts-dashboard
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: argo-rollouts-dashboard
    app.kubernetes.io/name: argo-rollouts-dashboard
    app.kubernetes.io/part-of: argo-rollouts
  name: argo-rollouts-dashboard
  namespace: rollouts-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-rollouts-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argo-rollouts-dashboard
    spec:
      containers:
      - image: quay.io/argoproj/kubectl-argo-rollouts:v1.6.4
        name: argo-rollouts-dashboard
        ports:
        - containerPort: 3100
      serviceAccountName: argo-rollouts-dashboard
